--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -15,7 +15,7 @@
     background-position: center;
     background-size: cover;
     width: 100%;
-    padding: 50px 0;
+    padding: 60px 0;
     text-align: center;
     color: white;
     min-height: 250px;
@@ -31,7 +31,7 @@
 
 .hosts-home img {
     height: 270px;
-    margin: 20px 0;
+    margin-bottom: -10px;
 }
 
 .section-title {
@@ -384,4 +384,39 @@
 
 #menu-toggle:checked~.dropdown-menu {
     display: block;
+}
+
+.listen {
+    display: flex;
+    justify-content: center;
+}
+
+.listen-button {
+    width: 90%;
+    max-width: 900px;
+    padding: 25px 20px;
+    background: #D9D9D9;
+    border: none;
+    border-radius: 30px;
+    box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
+    cursor: pointer;
+    transition: 0.3s;
+    text-align: center;
+}
+
+.listen-button:hover {
+    transform: scale(1.02);
+    box-shadow: 0px 6px 20px rgba(0,0,0,0.15);
+}
+
+.listen-title {
+    font-size: 26px;
+    font-weight: 500;
+    color: #1C5186;
+    margin-bottom: 5px;
+}
+
+.listen-subtitle {
+    font-size: 18px;
+    color: #333;
 }
